CRUD created automatically by Scaffolding

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApplication1Context": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1Context-b3b13b05-2f2b-4f1b-ad75-8aa10bb4320d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
